--- a/styles/globals.css
+++ b/styles/globals.css
@@ -98,6 +98,10 @@ a {
   font-weight: bold;
 }
 
+.pokemon-list__button--favorite{
+  background-color: yellow;
+}
+
 .pokemon-details-card{
   box-shadow: 0px 4px 10px 2px rgb(41, 41, 41, 0.15);
   padding:1rem;
@@ -111,9 +115,31 @@ a {
 
 .pokemon-details{
   display: grid;
-  grid-template-rows: max-content 1fr;
+  grid-template-rows: 2rem max-content 1fr;
 
   max-height: 100%;
+}
+
+.pokemon-details__favorite{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.pokemon-details__favorite__button{
+  background-color: #D7EDF0;
+  border:none;
+  border-radius: 4px;
+  padding:.5rem 1rem;
+  font-size:1rem;
+
+  transition: all .1s ease-in;
+}
+
+.pokemon-details__favorite__button:hover{
+  cursor: pointer;
+  background-color: #CAE2E5;
+
 }
 
 .pokemon-details__info{
