--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,5 @@
 html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+ p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, sub, sup, tt, var,
@@ -186,4 +186,38 @@ a {
 
 .pokemon-details__moves__list__item{
   padding:.5rem;
+}
+
+.loading-spinner-container{
+  width:100%;
+  height:100%;
+
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loading-spinner {
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+}
+.loading-spinner:after {
+  content: " ";
+  display: block;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6px solid orange;
+  border-color: orange transparent orange transparent;
+  animation: loading-animation 1.2s linear infinite;
+}
+@keyframes loading-animation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
