--- a/styles/globals.css
+++ b/styles/globals.css
@@ -103,14 +103,16 @@ a {
 }
 
 .pokemon-details-card{
-  box-shadow: 0px 4px 10px 2px rgb(41, 41, 41, 0.15);
-  padding:1rem;
   width:20rem;
   height:35rem;
+  padding:1rem;
 
-  overflow: auto;
   justify-self: center;
   align-self: center;
+  overflow: auto;
+
+  box-shadow: 0px 4px 10px 2px rgb(41, 41, 41, 0.15);
+  border-radius:4px;
 }
 
 .pokemon-details{
